examples/boogie/test/ParseException/bitvectors2.bpl
/*
  This tests some bitvector properties.
*/


procedure Q()
{
	var x:bv0;
	x := 32bv0; //error
}
